add line auth and update yaml file
